chez library runs

--- a/README.org
+++ b/README.org
@@ -208,6 +208,28 @@ expression in the ~incode~ definition's body:
 #+end_src
 
 
+* Miscellaneous
+
+#+name: misc
+#+begin_src scheme :session
+(define-syntax push!
+  (lambda (x)
+    (syntax-case x ()
+      ((_ x xs)
+       #'(set! xs (cons x xs))))))
+
+(define-syntax pop!
+  (lambda (x)
+    (syntax-case x ()
+      ((_ xs)
+       #'(let ((x (car xs)))
+	   (set! xs (cdr xs))
+	   x)))))
+
+(define (digit-at i n)
+  (fxmod (fx/ n (expt 10 (1+ i))) 10))
+#+end_src
+
 * External Interface
 
 Functions that make it easier to deal with intcode cells, passing
@@ -226,10 +248,6 @@ appropriate symbols and arguments to some functions.
 
 (define (step M)
   (M 'step))
-
-;;; large step run
-(define (run M)
-  (M 'run))
 
 (define (send-input M . values)
   (apply M 'in values))
@@ -269,7 +287,6 @@ appropriate symbols and arguments to some functions.
 #+name: exports
 #+begin_src scheme :session :exports none
 step
-run
 send-input
 get-input
 get-output
@@ -288,18 +305,53 @@ run-intcode
 ** ChezScheme
 
 Originally written in ChezScheme, my preferred scheme at the moment,
-and thus the simplest scheme to package for.
+and thus the simplest scheme to package for. Whats missing is an easy
+way to parse the comma separated ints.
+
+#+name: chez-compat
+#+begin_src scheme :session
+(define (parse-intcode . port)
+  (define in
+    (if (null? port) (current-input-port) (car port)))
+  (define port-size (port-length in))
+  (let lp ((x (read-char in)) (negative? #f) (n 0) (program '()))
+    (cond
+     ((or (eof-object? x)
+	  (= port-size (port-position in)))
+      (reverse
+       (if negative?
+	   (cons (- n) program)
+	   (cons n program))))
+     ((char<=? #\0 x #\9)
+      (lp (read-char in) negative? (+ (* 10 n) (char->integer x) -48) program))
+     ((char=? x #\,)
+      (if negative?
+	  (lp (read-char in) #f 0 (cons (- n) program))
+	  (lp (read-char in) #f 0 (cons n program))))
+     ((char=? x #\-)
+      (assert (zero? n)) ; previous should have been comma or start of parse => n = 0
+      (lp (read-char in) #t n program))
+     (else
+      (error 'parse-intcode
+	     (format "unexpected char: ~a at index ~a~%" x (port-position in)))))))
+#+end_src
 
 #+begin_src scheme :session :tangle chez/intcode.sls :noweb yes :exports none
 (library (intcode)
-  (export ; export
+  (export parse-intcode
           <<exports>>)
   (import (chezscheme))
+
+  <<misc>>
+
+  <<chez-compat>>
 
   <<intcode>>
 
   <<library-interface>>)
 #+end_src
+
+
 
 
 
