add copying for intcode cells

--- a/README.org
+++ b/README.org
@@ -33,7 +33,7 @@ A hashtable is used for the second level of member because it will
 rarely be needed because the spec wants it to handle possibly very out
 of range addresses.
 
-*** Resets
+*** Resets and Forks
 
 The ~memory-1~ is copied to a vector from the input program to make
 restarts easier. The following internal function is called upon
@@ -49,6 +49,15 @@ receiving a request to reset:
   (set! in '())
   (set! out '())
   (set! status 'ok))
+
+(define (fork! m1* m2* ip* rb* in* out* status*)
+  (set! memory-1 m1*)
+  (set! memory-2 m2*)
+  (set! ip ip*)
+  (set! relative-base rb*)
+  (set! in in*)
+  (set! out out*)
+  (set! status status*))
 #+end_src
 
 *** Incrementing Pointers
@@ -143,7 +152,7 @@ correspond to the following operations:
     (case (fxmod op 100)
       ((1) (store! (addr op 3) (fx+ (val op 1) (val op 2))) (ip! 4))
       ((2) (store! (addr op 3) (fx* (val op 1) (val op 2))) (ip! 4))
-      ((3) (if (null? in) (set! status 'blocking-in)
+      ((3) (if (null? in) (set! status 'blocked)
                (begin (set! status 'ok) (store! (addr op 1) (pop! in)) (ip! 2))))
       ((4) (set! status 'out) (push! (val op 1) out) (ip! 2))
       ((5) (if (fxzero? (val op 1)) (ip! 3) (set! ip (val op 2))))
@@ -166,7 +175,7 @@ expression in the ~incode~ definition's body:
 (lambda (me . args)
   (case me
     ;; by default status is ok and any other states will be detected
-    ;; in step (blocking-in, done, and out)
+    ;; in step (blocked, done, and out)
     ((step) (set! status 'ok) (step) status)
     ;; args represent input signals. generally 1 will be fed at a time
     ;; but this allows for more.
@@ -183,9 +192,11 @@ expression in the ~incode~ definition's body:
     ((ip) ip)
     ((rb) relative-base)
     ((ref) (apply ref args))
-    ((store!) (apply store! args))
+    ((set!) (apply store! args))
     ((reset!) (reset!))
     ((program) program)
+    ((core-dump) (list program memory-1 memory-2 ip relative-base in out status))
+    ((fork!) (apply fork! args))
     (else (error 'cpu "unknown message" me))))
 #+end_src
 
@@ -236,11 +247,11 @@ appropriate symbols and arguments to some functions.
 
 #+name: library-interface
 #+begin_src scheme :session
-(define (read-memory M addr)
+(define (intcode-ref M addr)
   (M 'ref addr))
 
-(define (store! M addr val)
-  (M 'store! addr val))
+(define (intcode-set! M addr val)
+  (M 'set! addr val))
 
 (define (reset! M)
   (M 'reset!))
@@ -268,13 +279,20 @@ appropriate symbols and arguments to some functions.
     (if (memq s status) s (run (step M)))))
 
 (define (run-until-halt M)
-  (run-until '(done blocking-in) M))
+  (run-until '(done blocked) M))
 
 (define (done? M)
   (eq? 'done (status M)))
 
 (define (blocked? M)
-  (eq? 'blocking-in (status M)))
+  (eq? 'blocked (status M)))
+
+(define (fork-intcode M)
+  (apply (lambda (p m1 m2 i r in out status)
+	   (define M* (intcode p))
+	   (M* 'fork! (vector-copy m1) (hashtable-copy m2 #t) i r in out status)
+	   M*)
+	 (M 'core-dump)))
 
 (define (run-intcode program . input)
   (define M (intcode program))
@@ -310,7 +328,7 @@ appropriate symbols and arguments to some functions.
       (format "unexpected char: ~s at index ~a~%" x (port-position in))))))
 #+end_src
 
-And for racket:
+And for racket, no error reporting, but much nicer!
 
 #+name: racket-parse-intcode
 #+begin_src scheme :session
@@ -322,7 +340,9 @@ And for racket:
 
 #+name: exports
 #+begin_src scheme :session
-step
+step              ; small step
+intcode-ref       ; read intcode memory at address
+intcode-set!      ; set  intcdoe memory at address to value
 send-input
 get-input
 get-output
@@ -333,10 +353,14 @@ run-until-halt
 done?
 blocked?
 parse-intcode
+intcode
 run-intcode
+fork-intcode
 #+end_src
 
 * Packaging and Libraries
+
+** ChezScheme
 
 This is a r6rs scheme library and is known by me to work with at least
 ChezScheme and GNU Guile.
@@ -348,7 +372,8 @@ way to parse the comma separated ints.
 #+begin_src scheme :session :tangle chez/intcode.sls :noweb yes
 (library (intcode)
   (export ; export-list
-          <<exports>>)
+          <<exports>>
+	  )
   (import (chezscheme))
 
   <<intcode>>
@@ -377,7 +402,8 @@ order.
 #!r6rs
 (library (intcode)
   (export ; export-list
-          <<exports>>)
+          <<exports>>
+	  )
   (import (rnrs))
 
   <<intcode>>
@@ -406,6 +432,8 @@ A shim:
 (define hashtable-ref hash-ref)
 (define (fxzero? x)
   (unsafe-fx= 0 x))
+(define (hashtable-copy T mut?)
+  (hash-copy T))
 #+end_src
 
 #+begin_src scheme :session :tangle racket/intcode.rkt :noweb yes
@@ -415,7 +443,8 @@ A shim:
 	 racket/fixnum)
 
 (provide ; provisions
-         <<exports>>)
+         <<exports>>
+	 )
 
 <<intcode>>
 
